--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="load_text">loading data</string>
     <string name="blank" />
     <string name="search">search</string>
+    <string name="search_hint">search username</string>
 </resources>
